# DartArtificialArm

./: .gitignore  CMakeLists.txt  EnvWindow.cpp  EnvWindow.h
cmake/: FindBoost.cmake
core/: CMakeLists.txt  DARTHelper.cpp  DARTHelper.h  Ground.cpp  Ground.h  WorldUtils.cpp  WorldUtils.h
core/artificialArm/: ArtificialArm.cpp  ArtificialArm.h  Muscles.cpp  Muscles.h
core/environments/: ActionSpace.cpp  ActionSpace.h  ObservationSpace.cpp  ObservationSpace.h  PhysicalEnvironment.cpp  PhysicalEnvironment.h
data/: ArtificialArm.xml  Muscles.xml  ground.xml
forwardHeaders/: renderInterfaceFwd.h  skeletonFwd.h  worldFwd.h
playground/: CMakeLists.txt  main.cpp
training/: CMakeLists.txt  NumPyHelper.cpp  simulationHelper.cpp  testNetwork.py  testNetwork2.py  training.py
